--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -13,6 +13,8 @@
 					</div>
 					<div class="card-footer bg-white border-top">
 						<%= link_to "More Info", flat_path(flat) %>
+						<%= link_to "Edit", edit_flat_path(flat), class: 'text-warning' %>
+						<%= link_to "Delete", flat_path(flat), class: 'text-danger', method: :delete, data: { confirm: "Delete #{flat.name}?" } %>
 					</div>
 				</div>
 			<% end %>
