--- a/app/views/flats/edit.html.erb
+++ b/app/views/flats/edit.html.erb
@@ -1,3 +1,14 @@
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">🌠 Galaxy AirBnb</a>
+  </button>
+  <nav class="navbar navbar-light bg-light">
+	  <form class="form-inline">
+	    <button class="btn btn-light" type="button"><%= link_to 'Back', flat_path(@flat) %></button>
+	  </form>
+	</nav>
+</nav>
+<!-- NAVBAR -->
 <div class="container mt-4">
 	<h1>Update <%= @flat.name.capitalize %></h1>
 	<%= render 'flats/form' %>
