--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,6 +1,17 @@
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">🌠 Galaxy AirBnb</a>
+  </button>
+  <nav class="navbar navbar-light bg-light">
+	  <form class="form-inline">
+	    <button class="btn btn-outline-success" type="button"><%= link_to "Create", new_flat_path %></button>
+	  </form>
+	</nav>
+</nav>
+<!-- NAVBAR -->
+<!-- CONTENT -->
 <div class="container mt-4">
 	<h1>Available flats (<%= @flats.count %>)</h1>
-	<%= link_to "Add a flat", new_flat_path %>
 		<% @flats.each do |flat| %>
 				<div class="card" style="width: 18rem;">
 					<img class="card-img-top" src="https://picsum.photos/800/600" alt="flat image">
