--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,3 +1,16 @@
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">🌠 Galaxy AirBnb</a>
+  </button>
+  <nav class="navbar navbar-light bg-light">
+	  <form class="form-inline">
+	  	<button class="btn btn-outline-warning mx-2" type="button"><%= link_to 'Update', edit_flat_path(@flat) %></button>
+	  	<button class="btn btn-outline-danger mx-2" type="button"><%= link_to 'Delete', flat_path(@flat), method: :delete, data: { confirm: "Delete #{@flat.name}?" } %></button>
+	    <button class="btn btn-outline-secondary mx-2" type="button"><%= link_to 'Back', flats_path %></button>
+	  </form>
+	</nav>
+</nav>
+<!-- NAVBAR -->
 <div class="container mt-4">
 	<div class="bg-light border p-2">
 		<h1 class="font-weight-bold"><%= @flat.name %></h1>
@@ -9,7 +22,4 @@
 		<p>🧍<%= @flat.number_of_guests %></p>
 		<p>💸<%= @flat.price_per_night %></p>
 	</div>
-	<p><%= link_to 'Update', edit_flat_path(@flat) %></p>
-	<p><%= link_to 'Delete?', flat_path(@flat), method: :delete, data: { confirm: "Delete #{@flat.name}?" } %></p>
-	<p><%= link_to 'Back to flats', flats_path, class: 'btn btn-light mt-4' %></p>
 </div>
