added cool picture on show page

--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -11,15 +11,32 @@
 	</nav>
 </nav>
 <!-- NAVBAR -->
+<!-- FLAT BANNER -->
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://i.picsum.photos/id/1032/2880/1800.jpg?hmac=5SLBdyPZBMyr5IBkIRfffZV10bP87Y7RrxVZX1vCefA);">
+  <div class="container p-4">
+    <h1 class="font-weight-bold text-light"><%= @flat.name %></h1>
+    <p class="font-italic text-light"><%= @flat.address %></p>
+  </div>
+</div>
+<!-- FLAT BANNER -->
 <div class="container mt-4">
-	<div class="bg-light border p-2">
+	<!-- <div class="bg-light border p-2">
 		<h1 class="font-weight-bold"><%= @flat.name %></h1>
 		<p class="font-italic"><%= @flat.address %></p>
-	</div>
+	</div> -->
+
 	<div class="bg-light border p-2 mt-4">
 		<h2 class="font-weight-bold">Details</h2>
 		<p><%= @flat.description %></p>
 		<p>🧍<%= @flat.number_of_guests %></p>
 		<p>💸<%= @flat.price_per_night %></p>
+	</div>
+
+	<div class="bg-light border p-2 mt-4">
+		<h2 class="font-weight-bold">Share:</h2>
+		  <i class="fab fa-facebook-square"></i>
+		  <i class="fab fa-twitter-square"></i>
+		  <i class="fab fa-instagram"></i>
+		  <i class="fas fa-envelope-square"></i>
 	</div>
 </div>
