fixed a few margins

--- a/app/views/flats/edit.html.erb
+++ b/app/views/flats/edit.html.erb
@@ -9,8 +9,7 @@
 	</nav>
 </nav>
 <!-- NAVBAR -->
-<div class="container mt-4">
+<div class="container my-4">
 	<h1>Update <%= @flat.name.capitalize %></h1>
 	<%= render 'flats/form' %>
-	<p><%= link_to 'Back to flats', flats_path, class: 'btn btn-light mt-4' %></p>
 </div>
