--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -9,7 +9,7 @@
 	</nav>
 </nav>
 <!-- NAVBAR -->
-<div class="container mt-4">
+<div class="container my-4">
 	<h1>List a new flat</h1>
 	<%= render 'flats/form' %>
 </div>
